cleaning things up

--- a/doc/feffdoc.sty
+++ b/doc/feffdoc.sty
@@ -177,9 +177,9 @@
 
 %%% page headings: put the page mark on the inner side and the page
 %%%                number on the outer side.  Keep the footers empty.
-\usepackage{fancyheadings}
+\usepackage{fancyhdr}
 \pagestyle{fancy}
-\setlength{\headrulewidth}{1pt}
+%\setlength{\headrulewidth}{1pt}
 \lhead[\fancyplain{}{\bfseries\thepage}]
       {\fancyplain{}{\bfseries\rightmark}}
 \chead[\fancyplain{}{}]{\fancyplain{}{}}
