--- a/wrappers/perl/README.pod
+++ b/wrappers/perl/README.pod
@@ -166,6 +166,34 @@ gets set correctly whenever the C<path> method is called.
 
 =back
 
+=head2 Error reporting
+
+=over 4
+
+=item C<errorcode> (integer)
+
+An integer error code from either C<atom> or C<path>.  Check for
+non-zero value.  For a non-zero return from C<atom>, calling C<path>
+is likely to cause a problem in the genfmt calculation.  For a
+non-zero return from C<path>, the genfmt calculation was skipped.  See
+C<errormessage> for an explanation of the problem.
+
+=item C<errormessage> (string)
+
+A explanation of words of the problem found during C<atom> or C<path>.
+
+   $path->deg(-48);
+   $path->atom(0, 0, 3.61, 1);
+   $path->path;
+   if ($path->errorcode) {
+      print $path->errormessage;
+   };
+   ## ==prints==>
+    Error in make_path
+        path degeneracy (-48.00) is negative
+
+=back
+
 =head2 Array reference valued attributes
 
 =over 4
@@ -181,6 +209,8 @@ is the getter's return value.
     print join(", ", @$evec_ref);
     ## ==prints==> 0, 0, 1
 
+Setting C<evec> will also set C<ipol> to true.
+
 =item C<xivec>
 
 The Poynting vector of the incident beam for the ellipticity
@@ -191,6 +221,8 @@ is the getter's return value.
     $xivec_ref = $path->xivec;
     print join(", ", @$xivec_ref);
     ## ==prints==> 1, 1, 0
+
+Setting C<xivec> will also set C<ipol> to true.
 
 =item C<ri>
 
@@ -237,7 +269,7 @@ column 5 from F<feffNNNN.dat>.
 
 =item C<lam>
 
-A reference to an array containing lambda, themean free path.  This is
+A reference to an array containing lambda, the mean free path.  This is
 column 6 from F<feffNNNN.dat>.
 
 =item C<rep>
@@ -245,6 +277,69 @@ column 6 from F<feffNNNN.dat>.
 A reference to an array containing the real part of the comple
 momentum.  This is column 7 from F<feffNNNN.dat>.
 
+=back
+
+=head1 Error codes
+
+The error codes returned by the C<atom> and C<path> methods are the
+sums of the codes actually found by the method call, thus the returned
+error codes are meant to be interpreted bitwise.
+
+=head2 C<atom> method
+
+If any of these are triggered, it is very likely that a call to
+C<path> will return unreliable results or may crash the program.
+
+=over 4
+
+=item C<1>
+
+ipot argument to add_scatterer is less than 0
+
+=item C<2>
+
+ipot argument to add_scatterer is greater than 7
+
+=item C<4>
+
+coordinates are for an atom too close to the previous atom in the path
+
+=item C<8>
+
+nlegs greater than legtot
+
+=back
+
+=head2 C<path> method
+
+If any of these are triggered, genfmt will not be called and all
+output arrays will be zero-filled.
+
+=over 4
+
+=item C<1>
+
+the first atom specified is the absorber
+
+=item C<2>
+
+the last atom specified is the absorber
+
+=item C<4>
+
+path degeneracy is negative
+
+=item C<8>
+
+path index not between 0 and 9999
+
+=item C<16>
+
+ellipticity not between 0 and 1
+
+=item C<32>
+
+iorder not between 0 and 10
 
 =back
 
@@ -265,10 +360,6 @@ L<Moose>
 =item *
 
 Getter method(s) for rat and ipot
-
-=item *
-
-Error handling is almost nonexistent
 
 =back
 
