--- a/todo.org
+++ b/todo.org
@@ -3,14 +3,14 @@
 #+STARTUP: showall
 
 
-* The feff85exafs to do list [2/9]
+* The feff85exafs to do list [3/9]
 
  1. [ ] write header into ~f3ffNNNN.dat~ files
  2. [ ] use polarization correctly in feffpath library (fix
     test_materials.py around line 56)
  3. [ ] capture rat and ipot into STRUCT, propagate to wrappers
  4. [ ] capture header information in C struct, propagated into wrappers
- 5. [ ] check for existance/readability of phase.bin at level of
+ 5. [X] check for existance/readability of phase.bin at level of
     feffpath.c (need to learn how to use fopen or whatever, see line 212)
  6. [X] python wrapper / Larch plugin
  7. [X] nose testing for feffpath generated ~f3ffNNNN.dat~ files
