--- a/todo.org
+++ b/todo.org
@@ -3,18 +3,20 @@
 #+STARTUP: showall
 
 
-* The feff85exafs to do list [3/10]
+* The feff85exafs to do list [4/11]
 
  1. [ ] write header into ~f3ffNNNN.dat~ files
- 2. [ ] use polarization correctly in feffpath library (fix
+ 2. [ ] deg --> degen to match larch's _feffdat group
+ 3. [ ] use polarization correctly in feffpath library (fix
     test_materials.py around line 56)
- 3. [ ] capture rat and ipot into STRUCT, propagate to wrappers
- 4. [ ] capture a list of Z numbers so ipots can be readily translated
+ 4. [ ] +capture rat and ipot into STRUCT+, accumulate ipot and rat
+    wrappers as part of call to add_scatterer
+ 5. [X] capture a list of Z numbers so ipots can be readily translated
     to atomic species
- 5. [ ] capture header information in C struct, propagated into wrappers
- 6. [X] check for existance/readability of phase.bin at level of
+ 6. [ ] capture header information in C struct, propagated into wrappers
+ 7. [X] check for existance/readability of phase.bin at level of
     feffpath.c (need to learn how to use fopen or whatever, see line 212)
- 7. [X] python wrapper / Larch plugin
- 8. [X] nose testing for feffpath generated ~f3ffNNNN.dat~ files
- 9. [ ] fit with different feff versions -- comparison framework
- 10. [ ] library for encapsolating generation of ~phase.bin~
+ 8. [X] python wrapper / Larch plugin
+ 9. [X] nose testing for feffpath generated ~f3ffNNNN.dat~ files
+ 10. [ ] fit with different feff versions -- comparison framework
+ 11. [ ] library for encapsolating generation of ~phase.bin~
