--- a/todo.org
+++ b/todo.org
@@ -5,25 +5,27 @@
 
 * The feff85exafs to do list
 
-** feffpath library [8/10]
+** feffpath library [9/9]
 
  1. [X] write header into ~f3ffNNNN.dat~ files
  2. [X] deg --> degen to match larch's _feffdat group
- 3. [ ] use polarization correctly in feffpath library (fix
+ 3. [X] use polarization correctly in feffpath library (fix
     test_materials.py around line 56)
  4. [X] +capture rat and ipot from STRUCT+, accumulate ipot and rat
     wrappers as part of call to add_scatterer, also geom for python wrapper
  5. [X] capture a list of Z numbers so ipots can be readily translated
     to atomic species
  6. [X] capture header information in C struct, propagated into wrappers
- 7. [ ] capture information about muffin tin radii, norman radii,
-    ionization, a lá Larch _feffdat's potentials attribute
- 8. [X] check for existance/readability of phase.bin at level of
+ 7. [X] check for existance/readability of phase.bin at level of
     feffpath.c
- 9. [X] python wrapper / Larch plugin
- 10. [X] nose testing for feffpath generated ~f3ffNNNN.dat~ files
+ 8. [X] python wrapper / Larch plugin
+ 9. [X] nose testing for feffpath generated ~f3ffNNNN.dat~ files
 
-** big jobs [0/2]
+** big jobs [0/4]
 
- 1. [ ] fit with different feff versions -- comparison framework
- 2. [ ] library for encapsolating generation of ~phase.bin~
+ 1. [ ] make scatteringpath a drop in replacement for feffdat
+ 2. [ ] nosetests on result of scatteringpath with nnnn=False
+ 3. [ ] fit with different feff versions -- comparison framework
+ 4. [ ] library for encapsolating generation of ~phase.bin~
+    * capture information about muffin tin radii, norman radii,
+      ionization, a lá Larch _feffdat's potentials attribute
