--- a/wrappers/perl/README.pod
+++ b/wrappers/perl/README.pod
@@ -32,7 +32,7 @@ copper metal:
   my $path = Xray::FeffPath->new();
   $path->degen(48);
   $path->Index(4);
-  $path->phbin('../fortran/phase.bin');
+  $path->phpad('../fortran/phase.pad');
   $path->atom(0, 0, -3.61, 1);
   $path->atom(-1.805, 0, -1.805, 1);
   $path->path;
@@ -122,9 +122,9 @@ method of the same name.  Each of the following exists:
 
 =over 4
 
-=item C<phbin> (character, default = phase.bin)
+=item C<phpad> (character, default = phase.pad)
 
-The path to the F<phase.bin> file.  This gets right-padded with spaces
+The path to the F<phase.pad> file.  This gets right-padded with spaces
 to 256 characters, which is the length of the parameter in the
 underlying Fortran library.  Therefore, the value returned by the
 getter will be right-padded.
@@ -438,7 +438,7 @@ iorder not between 0 and 10
 
 =item I<64>
 
-F<phase.bin> cannot be found or cannot be read
+F<phase.pad> cannot be found or cannot be read
 
 =back
 
