--- a/todo.org
+++ b/todo.org
@@ -33,17 +33,18 @@
  6. [ ] capture information about muffin tin radii, norman radii,
     ionization, a lá Larch _feffdat's potentials attribute
 
-** build on Windows
+** build on Windows [1/4]
 
- 1. f85ut.py needs to be installed into a place where larch will find
+ 1. [ ] f85ut.py needs to be installed into a place where larch will find
     it.  (see ~larch> show _sys.path~, but plugins rather than modules)
+    
+ 2. [X] +need to replace ~bin/f85e~ with something that works on windows.+
+    made a runfeff method in f85ut instead
 
- 2. need to replace ~bin/f85e~ with something that works on windows.
-
- 3. ~platforms/windows/prep.sh~ needs aliases for running nosetests
+ 3. [ ] ~platforms/windows/prep.sh~ needs aliases for running nosetests
     and larch
 
- 4. perl wrapper cannot be linked successfully under Strawberry until
+ 4. [ ] perl wrapper cannot be linked successfully under Strawberry until
     a version of Strawberry using gcc 4.9 become available.
 
 ** compilation issues
